<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    android:weightSum="8"
    tools:context=".QuizzCategoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/id_category_math_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onMathCategoryClick"
            android:text="@string/str_category_math" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/id_category_port_txt_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onPortugueseCategoryClick"
            android:text="@string/str_category_port" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/id_category_chemistry_txt_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onChemistryCategoryClick"
            android:text="@string/str_category_chemistry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/id_category_physique_txt_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onPhysicsCategoryClick"
            android:text="@string/str_category_physique" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/id_category_geography_txt_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onGeographyCategoryClick"
            android:text="@string/str_category_geography" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/id_category_history_txt_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onHistoryCategoryClick"
            android:text="@string/str_category_history" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/id_category_biology_txt_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onBiologyCategoryClick"
            android:text="@string/str_category_biology" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/id_category_computer_science_txt_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onComputerScienceCategoryClick"
            android:text="@string/str_category_computer_science" />

    </LinearLayout>

</LinearLayout>